[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/GameOver.gd" type="Script" id=1]

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GameOverUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="GameOverUI"]
modulate = Color( 0, 0, 0, 0.521569 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverUI"]
margin_left = 121.5
margin_top = 25.0
margin_right = 198.5
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="GameOverUI/VBoxContainer"]
margin_right = 77.0
margin_bottom = 14.0
text = "Game Over"
align = 1

[node name="PlayAgainButton" type="Button" parent="GameOverUI/VBoxContainer"]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
text = "Play Again"

[node name="QuitButton" type="Button" parent="GameOverUI/VBoxContainer"]
margin_top = 42.0
margin_right = 77.0
margin_bottom = 62.0
focus_neighbour_bottom = NodePath("../PlayAgainButton")
mouse_default_cursor_shape = 2
text = "Quit"
[connection signal="pressed" from="GameOverUI/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="GameOverUI/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
